v2/lab-02/kube-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: words-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: db
  selector:
    app: words-db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    app: words-db
spec:
  template:
    metadata:
      labels:
        app: words-db
    spec:
      containers:
      - name: db
        image: harbor.svc.<cluster-name>.superkube.kubernetes.delivery/workshop/db
        ports:
        - containerPort: 5432
          name: db
      imagePullSecrets:
      - name: harbor-viktor 
---
apiVersion: v1
kind: Service
metadata:
  name: words
  labels:
    app: words-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: api
  selector:
    app: words-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: words
  labels:
    app: words-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: words-api
    spec:
      containers:
      - name: words
        image: harbor.svc.<cluster-name>.superkube.kubernetes.delivery/workshop/words
        ports:
        - containerPort: 8080
          name: api
      imagePullSecrets:
      - name: harbor-viktor
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: words-web
spec:
  ports:
    - port: 80
      targetPort: 80
      name: web
  selector:
    app: words-web
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    app: words-web
spec:
  template:
    metadata:
      labels:
        app: words-web
    spec:
      containers:
      - name: web
        image: harbor.svc.<cluster-name>.superkube.kubernetes.delivery/workshop/web
        ports:
        - containerPort: 80
          name: words-web
      imagePullSecrets:
      - name: harbor-viktor
