v2/lab-02/kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: wordsmith.app.<cluster-name>superkube.kubernetes.delivery
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
